# $NetBSD: CHANGES-7.1,v 1.1.2.79 2016/04/15 19:07:25 snj Exp $

A complete list of changes from the NetBSD 7.0 release to the NetBSD 7.1
release:

gnu/usr.bin/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h					patched by hand

	Welcome to 7.0_STABLE.
	[snj]

share/man/man4/btmagic.4			1.3-1.6
sys/dev/bluetooth/btmagic.c			1.12, 1.14
src/sys/dev/usb/usbdevs				1.696
src/sys/dev/usb/usbdevs.h			regen
src/sys/dev/usb/usbdevs_data.h			regen

	Add support for Apple Magic Trackpad.
	[bouyer, ticket #869]

distrib/amd64/ramdisks/common/Makefile.ramdisk	1.11
distrib/amd64/ramdisks/common/list.ramdisk	1.20
distrib/i386/ramdisks/common/Makefile.ramdisk	1.12
distrib/i386/ramdisks/common/list.ramdisk	1.26

	PR install/50311: missing gptmbr.bin on ramdisk based installs.
	[martin, ticket #992]

external/gpl3/gcc/dist/ChangeLog		patch
external/gpl3/gcc/dist/LAST_UPDATED		patch
external/gpl3/gcc/dist/MD5SUMS			patch
external/gpl3/gcc/dist/NEWS			patch
external/gpl3/gcc/dist/configure		patch
external/gpl3/gcc/dist/configure.ac		patch
external/gpl3/gcc/dist/INSTALL/binaries.html	patch
external/gpl3/gcc/dist/INSTALL/build.html	patch
external/gpl3/gcc/dist/INSTALL/configure.html	patch
external/gpl3/gcc/dist/INSTALL/download.html	patch
external/gpl3/gcc/dist/INSTALL/finalinstall.html patch
external/gpl3/gcc/dist/INSTALL/gfdl.html	patch
external/gpl3/gcc/dist/INSTALL/index.html	patch
external/gpl3/gcc/dist/INSTALL/old.html		patch
external/gpl3/gcc/dist/INSTALL/prerequisites.html patch
external/gpl3/gcc/dist/INSTALL/specific.html	patch
external/gpl3/gcc/dist/INSTALL/test.html	patch
external/gpl3/gcc/dist/config/ChangeLog		patch
external/gpl3/gcc/dist/contrib/ChangeLog	patch
external/gpl3/gcc/dist/contrib/reghunt/ChangeLog patch
external/gpl3/gcc/dist/contrib/regression/ChangeLog patch
external/gpl3/gcc/dist/fixincludes/ChangeLog	patch
external/gpl3/gcc/dist/gcc/BASE-VER		patch
external/gpl3/gcc/dist/gcc/ChangeLog		patch
external/gpl3/gcc/dist/gcc/DATESTAMP		patch